specs-dev/fission-deployment-config.yaml
# This file is generated by the 'fission spec init' command.
# See the README in this directory for background and usage information.
# Do not edit the UID below: that will break 'fission spec apply'
apiVersion: fission.io/v1
kind: DeploymentConfig
name: support-post-user-account-close
uid: 0497598d-c1e3-45c8-8ed5-712935f85441
